[metadata]
name = ubii-python-node
url = https://gitlab.lrz.de/IN-FAR/Thesis-Projects/ma-ss21_maximilian-schmidt_ubi-interact-python.git

[options]
python_requires = >=3.7
install_requires =
    backports.cached_property;python_version<"3.8"
    typing_extensions;python_version<"3.8"
    ubii-message-formats >= 0.2.6.dev8
    codestare-async-utils >= 0.1.dev11
    pyyaml
    aiohttp

package_dir =
    = src
packages = find_namespace:
include_package_data = True

[options.entry_points]
console_scripts =
    ubii-client = ubii.cli.main:main

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest
    pytest-asyncio
    ubii-ocr-module >= 0.1.dev11
