[metadata]
name = ubii-node-python
url = https://github.com/saggitar/ubii-node-python.git
author = Maximilian Schmidt
author_email = ga97lul@mytum.de
description = Ubi Interact Python Node
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst

keywords = ubi-interact, ubii, distributed, vr, augmented
classifiers =
    Programming Language :: Python :: 3

[options]
python_requires = >=3.7
install_requires =
    backports.cached_property;python_version<"3.8"
    typing_extensions;python_version<"3.8"
    ubii-message-formats >= 0.2.6.dev13
    codestare-async-utils >= 0.1.dev13
    pyyaml
    aiohttp

package_dir =
    = src
packages = find_namespace:
include_package_data = True

[options.entry_points]
console_scripts =
    ubii-client = ubii.cli.main:main [cli]

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest
    pytest-asyncio
    ubii-processing-module-ocr >= 0.1.dev11

cli =
    importlib_metadata;python_version<"3.8"

docs =
    importlib_metadata;python_version<"3.8"
    sphinx==4.2.0

dev =
    setuptools-changelog

[changelog]
changelog_fragments_path = changelog.d
major_changes_types =
    removal = Breaking Changes
minor_changes_types =
    feature = New Features
patch_changes_types =
    bugfix = Bug Fixes
    doc = Documentation
    misc = Miscellaneous