[metadata]
name = ubii-node-python
url = https://github.com/saggitar/ubii-node-python.git
author = Maximilian Schmidt
author_email = ga97lul@mytum.de
description = Ubi Interact Python Node
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst

keywords = ubi-interact, ubii, distributed, vr, augmented
classifiers =
    Programming Language :: Python :: 3

[options]
python_requires = >=3.7
install_requires =
    importlib_metadata;python_version<"3.8"
    backports.cached_property;python_version<"3.8"
    typing_extensions;python_version<"3.8"
    ubii-message-formats >= 0.2.9.dev5
    codestare-async-utils >= 0.2.dev2
    pyyaml
    aiohttp

package_dir =
    = src
packages = find_namespace:
include_package_data = True

[options.entry_points]
console_scripts =
    ubii-client = ubii.cli.main:main [cli]
    example-client = ubii.cli.main:info_log_client [cli]

[options.packages.find]
where = src

[options.extras_require]
cli =
    argparse == 1.4.0

docs =
    sphinx == 5.0.2

test =
    pytest == 7.1.2
    pytest-asyncio == 0.18.3
    pandas

dev =
    setuptools-changelog == 1.0.0

[changelog]
changelog_fragments_path = changelog.d
major_changes_types =
    removal = Breaking Changes
minor_changes_types =
    feature = New Features
patch_changes_types =
    bugfix = Bug Fixes
    doc = Documentation
    misc = Miscellaneous

[build_sphinx]
source-dir = ./docs/source
build-dir = ./docs/build
warning-is-error = True
all-files = True
